update homepage messaging

--- a/src/components/content/HomeAbout.astro
+++ b/src/components/content/HomeAbout.astro
@@ -10,8 +10,8 @@ import Button from "@components/ui/Button.astro";
         We’ve been working with hardwood floors since 1999.
       </h2>
       <p class="text-xl">
-        We've been trusted by luxury realtors and Parade of Homes owners to make
-        each home look and feel amazing.
+        We only do hardwood flooring, and we've been trusted by luxury realtors
+        and Parade of Homes owners to make each home look and feel amazing.
       </p>
     </div>
     <div class="ml-auto">
