--- a/src/components/content/HomeHero2.astro
+++ b/src/components/content/HomeHero2.astro
@@ -18,7 +18,11 @@ import books from "@assets/images/books-1.jpg";
       </h1>
       <p
         class="mb-8 text-xl font-semibold text-black dark:text-stone-400 lg:text-2xl">
-        For over 20 years we've focued on qualtiy and service you can trust.
+        We've been serving Colorado Springs for over 20 years, where we've
+        focued on qualtiy and service you can trust.
+      </p>
+      <p
+        class="mb-8 text-xl font-semibold text-black dark:text-stone-400 lg:text-2xl">
         Give us a call for a free, no pressure estimate to help get you pointed
         in the right direction.
       </p>
