Update homepage messaging.

--- a/src/components/content/HomeHero2.astro
+++ b/src/components/content/HomeHero2.astro
@@ -18,8 +18,8 @@ import books from "@assets/images/books-1.jpg";
       </h1>
       <p
         class="mb-8 text-xl font-semibold text-black dark:text-stone-400 lg:text-2xl">
-        We've been serving Colorado Springs for over 20 years, where we've
-        focued on qualtiy and service you can trust.
+        We've been serving Colorado Springs for over 20 years. We have
+        experience installing and refinishing every type of wood flooring.
       </p>
       <p
         class="mb-8 text-xl font-semibold text-black dark:text-stone-400 lg:text-2xl">
