--- a/src/components/content/HomeAbout.astro
+++ b/src/components/content/HomeAbout.astro
@@ -6,7 +6,7 @@ import Button from "@components/ui/Button.astro";
   <div class="container mx-auto my-20 px-10 sm:flex">
     <div class="sm:w-2/3">
       <p class="text-xl font-extrabold">About us</p>
-      <h2 class="mb-6 text-4xl font-bold">
+      <h2 class="mb-6 text-4xl font-extrabold">
         We’ve been working with hardwood floors since 1999.
       </h2>
       <p class="text-xl">
