--- a/src/components/content/HomeServices2.astro
+++ b/src/components/content/HomeServices2.astro
@@ -9,7 +9,7 @@ import { Icon } from "astro-icon/components";
     <div class="mb-8 max-w-screen-md lg:mb-16">
       <h2
         class="mb-4 text-4xl font-extrabold tracking-tight text-stone-900 dark:text-white">
-        Trusted services.
+        Quality and Service you can trust.
       </h2>
       <p class="text-stone-500 dark:text-stone-400 sm:text-xl">
         We've done it all, from the largest luxury homes in the city to condos
